--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -13,13 +13,13 @@
         android:id="@+id/listViewHistory"
         android:layout_centerHorizontal="true"
         android:choiceMode="none"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/button3"
         android:background="@android:color/white" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Get All Record"
         android:id="@+id/button2"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -30,7 +30,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="LEFT"
         android:id="@+id/button4"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -40,11 +40,30 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="RIGHT"
         android:id="@+id/button5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="Next"
         android:layout_alignParentBottom="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get After "
+        android:id="@+id/button3"
+        android:onClick="getAfter"
+        android:layout_below="@+id/button2"
+        android:layout_alignLeft="@+id/button2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView2"
+        android:layout_alignTop="@+id/button3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
