--- a/app/src/main/res/layout/activity_ichoice.xml
+++ b/app/src/main/res/layout/activity_ichoice.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1"
+    android:background="@color/MainBackground"
     tools:context="my.com.taruc.fitnesscompanion.UI.IChoiceActivity">
 
     <TextView
@@ -17,6 +16,7 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="Step"
+        android:textColor="@color/white"
         android:textSize="50sp" />
 
     <LinearLayout
@@ -28,19 +28,27 @@
         android:layout_below="@+id/txt_data"
         android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <Button
             android:id="@+id/btn_find"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="find device" />
+            android:text="@string/btn_lbl_find" />
 
         <Button
             android:id="@+id/btn_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="link device" />
+            android:text="@string/btn_lbl_link" />
+
+        <Button
+            android:id="@+id/btn_unlink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_lbl_unlink" />
 
     </LinearLayout>
 
@@ -51,6 +59,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/buttonLayout"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="33dp" />
 
     <LinearLayout
@@ -58,6 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sp_choose"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
 
         <TextView
@@ -65,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Device Version Number :"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -73,6 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/tv_device"
             android:text="- "
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -84,6 +97,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_version"
         android:layout_marginTop="20dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
 
         <TextView
@@ -94,6 +109,7 @@
             android:layout_toLeftOf="@+id/txt_data"
             android:layout_toStartOf="@+id/txt_data"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text="Battery Level :"
             android:textSize="18sp" />
 
@@ -104,6 +120,7 @@
             android:layout_marginRight="33dp"
             android:layout_toRightOf="@+id/tv_battterytitle"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text=" - "
             android:textSize="18sp" />
 
@@ -115,6 +132,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_battery"
         android:layout_marginTop="20dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
 
         <TextView
@@ -125,6 +144,7 @@
             android:layout_toLeftOf="@+id/txt_data"
             android:layout_toStartOf="@+id/txt_data"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text="Device ID :"
             android:textSize="18sp" />
 
@@ -135,6 +155,7 @@
             android:layout_marginRight="33dp"
             android:layout_toRightOf="@+id/tv_deviceidtitle"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text=" - "
             android:textSize="18sp" />
 
@@ -146,6 +167,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_deviceID"
         android:layout_marginTop="20dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
 
         <TextView
@@ -154,6 +177,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text="Date Time :"
             android:textSize="18sp" />
 
@@ -164,6 +188,7 @@
             android:layout_marginRight="33dp"
             android:layout_toRightOf="@+id/tv_datetimelabel"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text=" - "
             android:textSize="18sp" />
 
@@ -175,6 +200,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_datetime"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/sp_choose"
         android:layout_alignEnd="@+id/sp_choose"
