--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -1,5 +1,4 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -7,7 +6,6 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:facebook="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -17,14 +15,14 @@
         tools:context="my.com.taruc.fitnesscompanion.UI.UserProfilePage">
 
         <!--<com.facebook.login.widget.ProfilePictureView-->
-            <!--android:id="@+id/imageView2"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="200dp"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:background="@android:color/transparent"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--facebook:com_facebook_preset_size="normal"-->
-            <!--/>-->
+        <!--android:id="@+id/imageView2"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--facebook:com_facebook_preset_size="normal"-->
+        <!--/>-->
 
         <RelativeLayout
             android:id="@+id/imageViewProfile"
@@ -32,25 +30,24 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/editIcon"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dip"
             android:layout_marginBottom="20dp"
-            >
+            android:layout_marginLeft="20dip">
+
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="200dp"
                 android:layout_height="150dp"
-                android:src="@drawable/user_profile_grey"
                 android:layout_centerHorizontal="true"
-                />
+                android:src="@drawable/user_profile_grey" />
+
             <Button
                 android:id="@+id/buttonLoadPicture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Load Picture"
-                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true">
-            </Button>
+                android:layout_gravity="center"
+                android:text="Load Picture"></Button>
         </RelativeLayout>
 
 
@@ -58,191 +55,215 @@
             android:id="@+id/editIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_edit_white_24dp"
+            android:layout_margin="10dp"
             android:layout_toLeftOf="@+id/saveProfile"
-            android:layout_margin="10dp" />
+            android:src="@drawable/ic_edit_white_24dp" />
 
         <ImageView
             android:id="@+id/saveProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_save_white_24dp"
-            android:clickable="false"
             android:layout_alignParentRight="true"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:clickable="false"
+            android:src="@drawable/ic_save_white_24dp" />
 
         <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageViewProfile"
+            android:background="#ff6e779f"
+            android:paddingBottom="20dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:background="#ff6e779f">
+            android:paddingTop="20dp">
+
             <TableRow>
+
                 <TextView
                     android:id="@+id/textViewName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_margin="1dp"
                     android:text="@string/username"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="0"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp" />
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:layout_column="1"
+                    android:layout_margin="1dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="10dp"
                     android:text=":"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="1"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="10dp" />
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editTextName"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:textSize="15dp" />
+                    android:inputType="text"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
             </TableRow>
+
             <TableRow>
+
                 <TextView
                     android:id="@+id/textViewDOB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_margin="1dp"
                     android:text="@string/dateOfBirth"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="0"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp" />
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:layout_column="1"
+                    android:layout_margin="1dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="10dp"
                     android:text=":"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="1"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="10dp" />
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editTextDOB"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
                     android:layout_margin="1dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:textSize="15dp" />
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
             </TableRow>
+
             <TableRow>
+
                 <TextView
                     android:id="@+id/textViewGender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_margin="1dp"
                     android:text="@string/gender"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="0"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp" />
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:layout_column="1"
+                    android:layout_margin="1dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="10dp"
                     android:text=":"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="1"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="10dp" />
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editTextGender"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
                     android:layout_margin="1dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:textSize="15dp" />
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
             </TableRow>
+
             <TableRow>
+
                 <TextView
                     android:id="@+id/textViewHeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1dp"
                     android:text="@string/height"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp" />
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:layout_column="1"
+                    android:layout_margin="1dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="10dp"
                     android:text=":"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="1"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="10dp" />
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editTextHeight"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
                     android:layout_margin="1dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:textSize="15dp" />
+                    android:inputType="phone"
+                    android:maxLength="3"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:layout_column="3"
+                    android:layout_margin="1dp"
                     android:text="cm"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="3"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"/>
+                    android:textStyle="bold" />
             </TableRow>
+
             <TableRow>
+
                 <TextView
+                    android:id="@+id/textViewAge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Age*"
-                    android:id="@+id/textViewAge"
-                    android:textSize="15dp"
-                    android:textColor="@android:color/white"
                     android:layout_column="0"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp" />
+                    android:layout_margin="1dp"
+                    android:text="Age*"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:layout_column="1"
+                    android:layout_margin="1dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="10dp"
                     android:text=":"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_column="1"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="10dp" />
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editTextAge"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
                     android:layout_margin="1dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:textSize="15dp" />
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
             </TableRow>
         </TableLayout>
 
