--- a/app/src/main/res/layout-large/activity_event_page.xml
+++ b/app/src/main/res/layout-large/activity_event_page.xml
@@ -14,6 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleBar"
-        android:layout_margin="15dp">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_margin="15dp"
+        android:scrollbars="vertical" />
 </RelativeLayout>
