--- a/app/src/main/res/layout-large/activity_main_menu_appbar_3.xml
+++ b/app/src/main/res/layout-large/activity_main_menu_appbar_3.xml
@@ -191,6 +191,16 @@
                 </TableRow>
             </TableLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/IChoiceRemark"
+                android:layout_below="@+id/Menu"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/holo_green_light"
+                android:textSize="15dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/ichoiceRemark" />
 
         </RelativeLayout>
         </ScrollView>
