--- a/app/src/main/res/layout-large/activity_goal_page.xml
+++ b/app/src/main/res/layout-large/activity_goal_page.xml
@@ -189,7 +189,8 @@
             android:background="@android:color/transparent"
             android:gravity="center_vertical|right"
             android:layout_alignBottom="@+id/donut_progress"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:textSize="30dp" />
 
         <Button
             android:layout_width="wrap_content"
@@ -204,7 +205,8 @@
             android:background="@android:color/transparent"
             android:textColor="@android:color/white"
             android:layout_alignBottom="@+id/donut_progress"
-            android:layout_marginLeft="20dp" />
+            android:layout_marginLeft="20dp"
+            android:textSize="30dp" />
 
         <TextView
             android:layout_width="wrap_content"
